--- a/reforco/src/App.css
+++ b/reforco/src/App.css
@@ -1,10 +1,5 @@
-html,
-body {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 200;
-    font-style: normal;
+* {
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
 }
