--- a/reforco/src/pages/Home.css
+++ b/reforco/src/pages/Home.css
@@ -7,3 +7,10 @@
     font-weight: 200;
     font-style: normal;
 }
+
+
+.container-home {
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
+}
