--- a/reforco/src/pages/Home.css
+++ b/reforco/src/pages/Home.css
@@ -10,7 +10,17 @@
 
 
 .container-home {
-    height: 100vh;
-    width: 100vw;
     background-color: black;
+}
+
+.home {    
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.title-home {
+
+    color: white;
 }
