--- a/reforco/src/pages/MudarDia.css
+++ b/reforco/src/pages/MudarDia.css
@@ -21,3 +21,17 @@
     border-radius: 10px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 }
+
+.button-mudar-dia{
+    background-color: rgb(15, 15, 15);
+    color: rgb(255, 255, 255);
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    border: none;
+    transition: 0.3s;
+}
+
+.button-mudar-dia:hover{
+padding: 13px;
+}
