--- a/Romero/src/components/Navbar.css
+++ b/Romero/src/components/Navbar.css
@@ -1,4 +1,13 @@
 .container-navbar{
     background-color: #000;
     padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
+.navbar a{
+    display: flex;
+    align-items: center;
+    text-decoration: none;
 }
